<resources>
    <string name="app_name" translatable="false">AdoMusic Remote</string>
    <string name="text_welcome">Welcome!</string>
    <string name="text_hello">Hello,</string>
    <string name="text_create_playlist_error">Playlist name can\'t be empty</string>
    <string name="text_could_not_scan_files">Could not scan %d files.</string>
    <string name="text_delete_access">Delete access</string>
    <string name="text_download_language_failed">Language download failed</string>
    <string name="text_edit_playlist_note"><b>Note:</b> This may take a few seconds or minutes to change, do not edit until you change the name and/or description. If it doesn\'t change, try again.</string>
    <string name="text_scanned_files">Scanned %1$d of %2$d files.</string>
    <string name="text_playlist_added_to_library">%s playlist added to library</string>
    <string name="text_added_track_count_to_playlist">Added %1$d song(s) to %2$s</string>
    <string name="text_added_to_queue">%s added to queue</string>
    <string name="text_made_in_mexico_by_adgutech">Made in Mexico 🇲🇽 by AdguTech.</string>
    <string name="text_playlist_created">%s created successfully</string>
    <string name="text_pro_feature">%s is a Pro feature</string>
    <string name="text_restored_previous_purchase_please_restart">Restored previous purchase. Please restart the app to make use of all features.</string>
    <string name="text_unknown_error_occurred">Unknown error occurred</string>
    <string name="text_you_unfollowed">You unfollowed %s</string>
    <string name="text_x_selected">%1$d selected</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="speech_prompt">Search your library</string>
    <string name="followers">followers</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_notification_denied">Permission to access notification denied</string>
    <string name="permission_title_notification">Notification (required)</string>
    <string name="permission_summary_notification">AdoMusic Remote requires access to notifications for the remote connection status of the Spotify app.</string>
    <string name="summary_adomusic_remote_pro">Unlock all features: custom themes, volume controls, equalizer, and more.</string>
    <string name="summary_item_limit">The items of the library and the songs in the playlist are limited to a maximum of 50 items.</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="text_share_album">Share %s album using</string>
    <string name="text_share_artist">Share %s artist using</string>
    <string name="text_share_playlist">Share %s playlist using</string>
    <string name="text_share_song">Share %s song using</string>
    <string name="text_share_app">Hey check out this cool music player at: https://play.google.com/store/apps/details?id=%s</string>
    <string name="title_sign_in_spotify">Login with Spotify</string>
    <string name="message_sign_in_spotify">AdoMusic Remote needs to access music with Spotify.</string>
    <string name="title_spotify_premium_required">Spotify Premium required</string>
    <string name="message_spotify_premium_required">This feature is available for Spotify Premium. To use this feature, please subscribe to Spotify Premium.</string>
    <string name="count_album">Album</string>
    <string name="count_albums">Albums</string>
    <string name="count_artist">Artist</string>
    <string name="count_artists">Artists</string>
    <string name="count_playlist">Playlist</string>
    <string name="count_playlists">Playlists</string>
    <string name="count_song">Song</string>
    <string name="count_songs">Songs</string>
    <string name="empty">Empty</string>
    <string name="empty_albums">No Albums</string>
    <string name="empty_artists">No Artists</string>
    <string name="empty_playlists">No Playlists</string>
    <string name="empty_search">No results</string>
    <string name="empty_queue">No queue</string>
    <string name="no_lyrics_found">No lyrics found</string>
    <string name="empty_playlist_tracks">The %s playlist is empty.</string>
    <string name="title_home">Home</string>
    <string name="title_albums">Albums</string>
    <string name="title_artists">Artists</string>
    <string name="title_description">Description</string>
    <string name="title_now_playing_queue">Now Playing Queue</string>
    <string name="title_playlists">Playlists</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_songs">Songs</string>
    <string name="title_liked_songs">Liked Songs</string>
    <string name="title_more_albums_from">More albums from %s</string>
    <string name="title_top_artists">Top artists</string>
    <string name="title_top_tracks">Top tracks</string>
    <string name="action_accept">Accept</string>
    <string name="action_add_custom_playlist_cover_image">Add custom cover image</string>
    <string name="action_add_to_current_playing">Add to playing queue</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="action_browse_album">Browse album</string>
    <string name="action_browse_artist">Browse artist</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_create">Create</string>
    <string name="action_download">Download</string>
    <string name="action_edit">Edit</string>
    <string name="action_equalizer">Equalizer</string>
    <string name="action_equalizer_custom">Custom</string>
    <string name="action_exit">Exit</string>
    <string name="action_finish">Finish</string>
    <string name="action_follow">Follow</string>
    <string name="action_followed">Followed</string>
    <string name="action_go_to_pro">Go to PRO</string>
    <string name="action_grant">Grant</string>
    <string name="action_grant_access">Grant access</string>
    <string name="action_keyboard">Keyboard</string>
    <string name="action_log_in">Log In</string>
    <string name="action_lyrics">Lyrics</string>
    <string name="action_manager">Manager</string>
    <string name="action_play">Play</string>
    <string name="action_play_all">Play all</string>
    <string name="action_ok">OK</string>
    <string name="action_remove">Remove</string>
    <string name="action_remove_playlist_from_library">Remove playlist from library</string>
    <string name="action_remove_to_liked_songs">Remove to Liked Songs</string>
    <string name="action_restore">Restore</string>
    <string name="action_save_playlist_to_library">Save playlist to library</string>
    <string name="action_save_to_liked_songs">Save to Liked Songs</string>
    <string name="action_see_details_on_spotify">See details on Spotify</string>
    <string name="action_select_all">Select all</string>
    <string name="action_set">Set</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_shuffle">Shuffle</string>
    <string name="action_try_again">Try again</string>
    <string name="action_sort_order">Sort order</string>
    <string name="preference_category_title_themes">Themes</string>
    <string name="preference_category_summary_themes">Change the theme and colors of the app.</string>
    <string name="preference_category_title_playback">Playback</string>
    <string name="preference_category_summary_playback">Customize the now playing screen.</string>
    <string name="preference_category_title_personalize">Personalize</string>
    <string name="preference_category_summary_personalize">Customize your now playing and UI controls.</string>
    <string name="preference_category_title_general">General</string>
    <string name="preference_category_summary_general">General testing features.</string>
    <string name="preference_category_title_spotify_settings">Spotify settings</string>
    <string name="preference_category_summary_spotify_settings">More settings in the Spotify app.</string>
    <string name="preference_category_title_about">About</string>
    <string name="preference_category_summary_about">License, donate &amp; more.</string>
    <string name="title_preference_subcategory_theme">Theme</string>
    <string name="title_preference_subcategory_colors">Colors</string>
    <string name="title_preference_app_theme">App theme</string>
    <string name="title_preference_just_black">Just Black</string>
    <string name="title_preference_material_you">Material You</string>
    <string name="title_preference_use_font">Use Nunito font</string>
    <string name="title_preference_wallpaper_color">Wallpaper color</string>
    <string name="title_preference_accent_color">Accent color</string>
    <string name="title_preference_desaturated_color">Desaturated color</string>
    <string name="title_preference_adaptive_color">Adaptive color</string>
    <string name="summary_preference_wallpaper_color">Extract accent color from wallpaper</string>
    <string name="summary_preference_accent_color">The theme accent color, defaults to blue</string>
    <string name="summary_preference_desaturated_color">As per Material Design guide lines in dark mode colors should be desaturated</string>
    <string name="summary_preference_adaptive_color">The background and control button colors change according to the album art from the now playing screen</string>
    <string name="title_preference_subcategory_controls">Controls</string>
    <string name="title_preference_playback_theme">Playback theme</string>
    <string name="title_preference_snow_fall_effect">Snowfall effect</string>
    <string name="title_preference_circular_play_button">Circular play button</string>
    <string name="title_preference_extra_controls">Extra controls</string>
    <string name="title_preference_volume_controls">Volume controls</string>
    <string name="title_preference_expand_now_playing_panel">Expand playback panel</string>
    <string name="title_preference_blur_amount">Blur amount</string>
    <string name="summary_preference_snow_fall_effect">You can enjoy the Snowfall feature during the christmas season. This feature is available for the christmas season.</string>
    <string name="summary_preference_extra_controls">Add extra controls for mini player</string>
    <string name="summary_preference_volume_controls">If enough space is available, show volume controls in the now playing screen</string>
    <string name="summary_preference_expand_now_playing_panel">Clicking on the notification will show playback screen instead of the home screen</string>
    <string name="summary_preference_blur_amount">Amount of blur applied for blur themes, lower is faster</string>
    <string name="title_preference_subcategory_top_played">Top played</string>
    <string name="title_preference_subcategory_advanced">Advanced</string>
    <string name="title_preference_last_top_played_artist">Last top played artists</string>
    <string name="title_preference_last_top_played_track">Last top played songs</string>
    <string name="title_preference_pause_on_zero">Pause on zero</string>
    <string name="title_preference_keep_screen_on">Keep the screen on</string>
    <string name="title_preference_adjust_volume">Adjust the volume</string>
    <string name="title_preference_language">Language</string>
    <string name="summary_preference_pause_on_zero">Pauses the song when the volume decreases to zero and starts playing back when the volume level rises</string>
    <string name="summary_preference_keep_screen_on">Keep in mind that enabling this feature may affect battery life</string>
    <string name="summary_preference_adjust_volume">Control the volume when not playing</string>
</resources>