<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/title_preference_subcategory_theme">

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="auto"
            android:entries="@array/pref_general_theme_list_titles"
            android:entryValues="@array/pref_general_theme_list_values"
            android:key="general_theme"
            android:layout="@layout/list_item_view"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/title_preference_app_theme"
            app:icon="@drawable/ic_palette_24dp" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:key="black_theme"
            android:layout="@layout/list_item_view_switch_no_title"
            android:title="@string/title_preference_just_black" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="@bool/md3_enabled"
            android:disableDependentsState="true"
            android:key="material_you"
            android:layout="@layout/list_item_view_switch_no_title"
            android:title="@string/title_preference_material_you"
            app:isPreferenceVisible="@bool/md3_available" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="custom_font"
            android:layout="@layout/list_item_view_switch_no_title"
            android:title="@string/title_preference_use_font" />

    </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:key="category_color"
        android:layout="@layout/preference_category_title"
        android:title="@string/title_preference_subcategory_colors">

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="wallpaper_accent"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/summary_preference_wallpaper_color"
            android:title="@string/title_preference_wallpaper_color" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEColorPreference
            android:dependency="material_you"
            android:key="accent_color"
            android:layout="@layout/list_item_color_view"
            android:persistent="false"
            android:summary="@string/summary_preference_accent_color"
            android:title="@string/title_preference_accent_color"
            app:icon="@drawable/ic_colorize_24dp" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:dependency="material_you"
            android:key="desaturated_color"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/summary_preference_desaturated_color"
            android:title="@string/title_preference_desaturated_color" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="adaptive_color"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/summary_preference_adaptive_color"
            android:title="@string/title_preference_adaptive_color" />

    </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

</androidx.preference.PreferenceScreen>