<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2022-2025 Adolfo Gutiérrez <adgutech@gmail.com>
  ~ and Contributors.
  ~
  ~ This file is part of Adgutech.
  ~
  ~  Adgutech is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.adgutech.adomusic.remote.preferences.NowPlayingScreenPreference
        android:key="now_playing_screen"
        android:layout="@layout/list_item_view"
        android:title="@string/title_preference_playback_theme"
        app:icon="@drawable/ic_play_circle_24dp" />

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
        android:defaultValue="false"
        app:icon="@drawable/ic_mode_cool_24dp"
        android:key="snow_fall"
        android:layout="@layout/list_item_view_switch"
        android:summary="@string/summary_preference_snow_fall_effect"
        android:title="@string/title_preference_snow_fall_effect" />

    <!--<code.name.monkey.appthemehelper.common.prefs.supportv7.ATEListPreference
        android:defaultValue="0"
        android:entries="@array/pref_lyrics_type_entries"
        android:entryValues="@array/pref_lyrics_type_values"
        android:key="lyrics_type"
        android:layout="@layout/list_item_view"
        android:title="@string/title_preference_lyrics_type" />

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
        android:defaultValue="false"
        android:key="lyrics_screen_on"
        android:layout="@layout/list_item_view_switch"
        android:summary="@string/title_preference_lyrics_screen_on"
        android:title="@string/title_preference_lyrics_screen_on" />-->

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
        android:defaultValue="false"
        android:key="circle_play_button"
        android:layout="@layout/list_item_view_switch_no_title"
        android:title="@string/title_preference_circular_play_button" />

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/title_preference_subcategory_controls">

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:layout="@layout/list_item_view_switch"
            app:defaultValue="false"
            app:icon="@drawable/ic_play_arrow_24dp"
            app:key="extra_controls"
            app:summary="@string/summary_preference_extra_controls"
            app:title="@string/title_preference_extra_controls" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:layout="@layout/list_item_view_switch"
            app:defaultValue="false"
            app:icon="@drawable/ic_volume_up_24dp"
            app:key="volume_visibility_mode"
            app:summary="@string/summary_preference_volume_controls"
            app:title="@string/title_preference_volume_controls" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:layout="@layout/list_item_view_switch"
            app:defaultValue="false"
            app:icon="@drawable/ic_keyboard_arrow_up_24dp"
            app:key="expand_playback_panel"
            app:summary="@string/summary_preference_expand_now_playing_panel"
            app:title="@string/title_preference_expand_now_playing_panel" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESeekBarPreference
            android:defaultValue="12"
            android:key="new_blur_amount"
            android:layout="@layout/list_item_view_seekbar"
            android:max="25"
            android:summary="@string/summary_preference_blur_amount"
            android:title="@string/title_preference_blur_amount"
            app:ateKey_pref_unit="px"
            app:icon="@drawable/ic_blur_on_24dp"
            app:showSeekBarValue="true" />

    </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

</androidx.preference.PreferenceScreen>