<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2022-2025 Adolfo Gutiérrez <adgutech@gmail.com>
  ~ and Contributors.
  ~
  ~ This file is part of Adgutech.
  ~
  ~  Adgutech is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/title_preference_subcategory_top_played">

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="medium_term"
            android:entries="@array/pref_time_range_entries"
            android:entryValues="@array/pref_time_range_values"
            android:key="artist_time_range"
            android:layout="@layout/list_item_view"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/title_preference_last_top_played_artist"
            app:icon="@drawable/ic_artist_24dp_fill" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="medium_term"
            android:entries="@array/pref_time_range_entries"
            android:entryValues="@array/pref_time_range_values"
            android:key="track_time_range"
            android:layout="@layout/list_item_view"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/title_preference_last_top_played_track"
            app:icon="@drawable/ic_music_note_24dp" />

    </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/title_preference_subcategory_advanced">

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="pause_on_zero_volume"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/summary_preference_pause_on_zero"
            android:title="@string/title_preference_pause_on_zero"
            app:icon="@drawable/ic_pause_24dp" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="keep_screen_on"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/summary_preference_keep_screen_on"
            android:title="@string/title_preference_keep_screen_on"
            app:icon="@drawable/ic_brightness_6_24dp" />

        <code.name.monkey.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="adjust_volume"
            android:layout="@layout/list_item_view_switch"
            android:summary="@string/summary_preference_adjust_volume"
            android:title="@string/title_preference_adjust_volume"
            app:icon="@drawable/ic_volume_up_24dp"
            app:isPreferenceVisible="@bool/adjust_volume_available"/>

    </code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEListPreference
        android:defaultValue="auto"
        android:entries="@array/pref_language_names"
        android:entryValues="@array/pref_language_codes"
        android:key="language_code"
        android:layout="@layout/list_item_view"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/title_preference_language"
        app:icon="@drawable/ic_translate_24dp" />

</androidx.preference.PreferenceScreen>